tests/ui/rpc/fail/async_function_returning_impl_stream.rs
use zod::{rpc, Namespace};

#[derive(Namespace)]
struct A;

#[rpc]
impl A {
    async fn test(&mut self) -> impl futures::Stream<Item = usize> {
        futures::stream::once(async { 0 })
    }
}

fn main() {}
