tests/ui/rpc/fail/async_function_returning_impl_stream.stderr
error[E0562]: `impl Trait` only allowed in function and inherent method return types, not in path
 --> tests/ui/rpc/fail/async_function_returning_impl_stream.rs:8:33
  |
8 |     async fn test(&mut self) -> impl futures::Stream<Item = usize> {
  |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `impl futures::Stream<Item = usize>: Serialize` is not satisfied
 --> tests/ui/rpc/fail/async_function_returning_impl_stream.rs:6:1
  |
6 | #[rpc]
  | ^^^^^^ the trait `Serialize` is not implemented for `impl futures::Stream<Item = usize>`
  |
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
          and $N others
note: required by a bound in `Response::method`
 --> core/src/rpc/mod.rs
  |
  |     pub fn method(id: usize, value: impl serde::ser::Serialize + ResponseType) -> Self {
  |                                          ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Response::method`
  = note: this error originates in the attribute macro `rpc` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `impl futures::Stream<Item = usize>: ResponseType` is not satisfied
 --> tests/ui/rpc/fail/async_function_returning_impl_stream.rs:6:1
  |
6 | #[rpc]
  | ^^^^^^ the trait `ResponseType` is not implemented for `impl futures::Stream<Item = usize>`
  |
  = help: the following other types implement trait `ResponseType`:
            &str
            ()
            (T1, T2)
            (T1, T2, T3)
            (T1, T2, T3, T4)
            (T1, T2, T3, T4, T5)
            (T1, T2, T3, T4, T5, T6)
            (T1, T2, T3, T4, T5, T6, T7)
          and $N others
note: required by a bound in `Response::method`
 --> core/src/rpc/mod.rs
  |
  |     pub fn method(id: usize, value: impl serde::ser::Serialize + ResponseType) -> Self {
  |                                                                  ^^^^^^^^^^^^ required by this bound in `Response::method`
  = note: this error originates in the attribute macro `rpc` (in Nightly builds, run with -Z macro-backtrace for more info)
